--- a/index.html
+++ b/index.html
@@ -9,32 +9,197 @@
 <body>
     <div class="Parent">
         <div class="card card1">
-            <div class="child child1"></div>
-            <div class="child child2"></div>
-            <div class="child child3"></div>
-            <div class="child child4"></div>
-            <div class="child child5"></div>
-            <div class="child child6"></div>
-            <div class="child child7"></div>
-            <div class="child child8"></div>
-            <div class="child child9"></div>
-            <div class="child child10"></div>
-            <div class="child child11"></div>
-            <div class="child child12"></div>
-            <div class="child child13"></div>
-            <div class="child child14"></div>
-            <div class="child child15"></div>
-            <div class="child child16"></div>
-            <div class="child child17"></div>
-            <div class="child child18"></div>
-            <div class="child child19"></div>
-            <div class="child child20"></div>
+            <div class="colors-div">
+                <div class="child child1" style="background-color: rgb(246,229,141);"></div>
+            <div class="child child2" style="background-color: rgb(255,190,118);"></div>
+            <div class="child child3" style="background-color: 
+rgb(255,121,121);"></div>
+            <div class="child child4" style="background-color: rgb(186,220,88);"></div>
+            <div class="child child5" style="background-color: rgb(223,249,251);"></div>
+            <div class="child child6" style="background-color: rgb(249,202,36);"></div>
+            <div class="child child7" style="background-color: 
+rgb(240,147,43);"></div>
+            <div class="child child8" style="background-color: rgb(235,77,75);"></div>
+            <div class="child child9" style="background-color: rgb(106,176,76);"></div>
+            <div class="child child10" style="background-color: rgb(199,236,238);"></div>
+            <div class="child child11" style="background-color: rgb(126,214,223);"></div>
+            <div class="child child12" style="background-color: rgb(224,86,253);"></div>
+            <div class="child child13" style="background-color: rgb(104,109,224);"></div>
+            <div class="child child14" style="background-color: rgb(48,51,107);"></div>
+            <div class="child child15" style="background-color: rgb(149,175,192);"></div>
+            <div class="child child16" style="background-color: rgb(34,166,179);"></div>
+            <div class="child child17" style="background-color: rgb(190,46,221);"></div>
+            <div class="child child18" style="background-color: rgb(72,52,212);"></div>
+            <div class="child child19" style="background-color: rgb(19,15,64);"></div>
+            <div class="child child20" style="background-color: rgb(83,92,104);"></div>
+            </div>
+
+            <div class="footer-div">
+                <span>Aussie Palette</span>
+                <span>AU</span>
+            </div>
+
         </div>
-        <div class="card card2"></div>
-        <div class="card card3"></div>
-        <div class="card card4"></div>
-        <div class="card card5"></div>
-        <div class="card card6"></div>
+
+        <div class="card card2">
+            <div class="colors-div">
+                <div class="child child1" style="background-color: rgb(246,229,141);"></div>
+            <div class="child child2" style="background-color: rgb(255,190,118);"></div>
+            <div class="child child3" style="background-color: 
+rgb(255,121,121);"></div>
+            <div class="child child4" style="background-color: rgb(186,220,88);"></div>
+            <div class="child child5" style="background-color: rgb(223,249,251);"></div>
+            <div class="child child6" style="background-color: rgb(249,202,36);"></div>
+            <div class="child child7" style="background-color: 
+rgb(240,147,43);"></div>
+            <div class="child child8" style="background-color: rgb(235,77,75);"></div>
+            <div class="child child9" style="background-color: rgb(106,176,76);"></div>
+            <div class="child child10" style="background-color: rgb(199,236,238);"></div>
+            <div class="child child11" style="background-color: rgb(126,214,223);"></div>
+            <div class="child child12" style="background-color: rgb(224,86,253);"></div>
+            <div class="child child13" style="background-color: rgb(104,109,224);"></div>
+            <div class="child child14" style="background-color: rgb(48,51,107);"></div>
+            <div class="child child15" style="background-color: rgb(149,175,192);"></div>
+            <div class="child child16" style="background-color: rgb(34,166,179);"></div>
+            <div class="child child17" style="background-color: rgb(190,46,221);"></div>
+            <div class="child child18" style="background-color: rgb(72,52,212);"></div>
+            <div class="child child19" style="background-color: rgb(19,15,64);"></div>
+            <div class="child child20" style="background-color: rgb(83,92,104);"></div>
+            </div>
+
+            <div class="footer-div">
+                <span>British Palette</span>
+                <span>GB</span>
+            </div>
+        </div>
+
+        <div class="card card3">
+            <div class="colors-div">
+                <div class="child child1" style="background-color: rgb(246,229,141);"></div>
+            <div class="child child2" style="background-color: rgb(255,190,118);"></div>
+            <div class="child child3" style="background-color: 
+rgb(255,121,121);"></div>
+            <div class="child child4" style="background-color: rgb(186,220,88);"></div>
+            <div class="child child5" style="background-color: rgb(223,249,251);"></div>
+            <div class="child child6" style="background-color: rgb(249,202,36);"></div>
+            <div class="child child7" style="background-color: 
+rgb(240,147,43);"></div>
+            <div class="child child8" style="background-color: rgb(235,77,75);"></div>
+            <div class="child child9" style="background-color: rgb(106,176,76);"></div>
+            <div class="child child10" style="background-color: rgb(199,236,238);"></div>
+            <div class="child child11" style="background-color: rgb(126,214,223);"></div>
+            <div class="child child12" style="background-color: rgb(224,86,253);"></div>
+            <div class="child child13" style="background-color: rgb(104,109,224);"></div>
+            <div class="child child14" style="background-color: rgb(48,51,107);"></div>
+            <div class="child child15" style="background-color: rgb(149,175,192);"></div>
+            <div class="child child16" style="background-color: rgb(34,166,179);"></div>
+            <div class="child child17" style="background-color: rgb(190,46,221);"></div>
+            <div class="child child18" style="background-color: rgb(72,52,212);"></div>
+            <div class="child child19" style="background-color: rgb(19,15,64);"></div>
+            <div class="child child20" style="background-color: rgb(83,92,104);"></div>
+            </div>
+
+            <div class="footer-div">
+                <span>Canadian Palette</span>
+                <span>CA</span>
+            </div>
+        </div>
+
+        <div class="card card4">
+            <div class="colors-div">
+                <div class="child child1" style="background-color: rgb(246,229,141);"></div>
+            <div class="child child2" style="background-color: rgb(255,190,118);"></div>
+            <div class="child child3" style="background-color: 
+rgb(255,121,121);"></div>
+            <div class="child child4" style="background-color: rgb(186,220,88);"></div>
+            <div class="child child5" style="background-color: rgb(223,249,251);"></div>
+            <div class="child child6" style="background-color: rgb(249,202,36);"></div>
+            <div class="child child7" style="background-color: 
+rgb(240,147,43);"></div>
+            <div class="child child8" style="background-color: rgb(235,77,75);"></div>
+            <div class="child child9" style="background-color: rgb(106,176,76);"></div>
+            <div class="child child10" style="background-color: rgb(199,236,238);"></div>
+            <div class="child child11" style="background-color: rgb(126,214,223);"></div>
+            <div class="child child12" style="background-color: rgb(224,86,253);"></div>
+            <div class="child child13" style="background-color: rgb(104,109,224);"></div>
+            <div class="child child14" style="background-color: rgb(48,51,107);"></div>
+            <div class="child child15" style="background-color: rgb(149,175,192);"></div>
+            <div class="child child16" style="background-color: rgb(34,166,179);"></div>
+            <div class="child child17" style="background-color: rgb(190,46,221);"></div>
+            <div class="child child18" style="background-color: rgb(72,52,212);"></div>
+            <div class="child child19" style="background-color: rgb(19,15,64);"></div>
+            <div class="child child20" style="background-color: rgb(83,92,104);"></div>
+            </div>
+
+            <div class="footer-div">
+                <span>Chinese Palette</span>
+                <span>CN</span>
+            </div>
+        </div>
+
+        <div class="card card5">
+            <div class="colors-div">
+                <div class="child child1" style="background-color: rgb(246,229,141);"></div>
+            <div class="child child2" style="background-color: rgb(255,190,118);"></div>
+            <div class="child child3" style="background-color: 
+rgb(255,121,121);"></div>
+            <div class="child child4" style="background-color: rgb(186,220,88);"></div>
+            <div class="child child5" style="background-color: rgb(223,249,251);"></div>
+            <div class="child child6" style="background-color: rgb(249,202,36);"></div>
+            <div class="child child7" style="background-color: 
+rgb(240,147,43);"></div>
+            <div class="child child8" style="background-color: rgb(235,77,75);"></div>
+            <div class="child child9" style="background-color: rgb(106,176,76);"></div>
+            <div class="child child10" style="background-color: rgb(199,236,238);"></div>
+            <div class="child child11" style="background-color: rgb(126,214,223);"></div>
+            <div class="child child12" style="background-color: rgb(224,86,253);"></div>
+            <div class="child child13" style="background-color: rgb(104,109,224);"></div>
+            <div class="child child14" style="background-color: rgb(48,51,107);"></div>
+            <div class="child child15" style="background-color: rgb(149,175,192);"></div>
+            <div class="child child16" style="background-color: rgb(34,166,179);"></div>
+            <div class="child child17" style="background-color: rgb(190,46,221);"></div>
+            <div class="child child18" style="background-color: rgb(72,52,212);"></div>
+            <div class="child child19" style="background-color: rgb(19,15,64);"></div>
+            <div class="child child20" style="background-color: rgb(83,92,104);"></div>
+            </div>
+
+            <div class="footer-div">
+                <span>Dutch Palette</span>
+                <span>NL</span>
+            </div>
+        </div>
+
+        <div class="card card6">
+            <div class="colors-div">
+                <div class="child child1" style="background-color: rgb(246,229,141);"></div>
+            <div class="child child2" style="background-color: rgb(255,190,118);"></div>
+            <div class="child child3" style="background-color: 
+rgb(255,121,121);"></div>
+            <div class="child child4" style="background-color: rgb(186,220,88);"></div>
+            <div class="child child5" style="background-color: rgb(223,249,251);"></div>
+            <div class="child child6" style="background-color: rgb(249,202,36);"></div>
+            <div class="child child7" style="background-color: 
+rgb(240,147,43);"></div>
+            <div class="child child8" style="background-color: rgb(235,77,75);"></div>
+            <div class="child child9" style="background-color: rgb(106,176,76);"></div>
+            <div class="child child10" style="background-color: rgb(199,236,238);"></div>
+            <div class="child child11" style="background-color: rgb(126,214,223);"></div>
+            <div class="child child12" style="background-color: rgb(224,86,253);"></div>
+            <div class="child child13" style="background-color: rgb(104,109,224);"></div>
+            <div class="child child14" style="background-color: rgb(48,51,107);"></div>
+            <div class="child child15" style="background-color: rgb(149,175,192);"></div>
+            <div class="child child16" style="background-color: rgb(34,166,179);"></div>
+            <div class="child child17" style="background-color: rgb(190,46,221);"></div>
+            <div class="child child18" style="background-color: rgb(72,52,212);"></div>
+            <div class="child child19" style="background-color: rgb(19,15,64);"></div>
+            <div class="child child20" style="background-color: rgb(83,92,104);"></div>
+            </div>
+
+            <div class="footer-div">
+                <span>French Palette</span>
+                <span>FR</span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
