--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Colour Palette</title>
 </head>
 <body>
-    <div class="Parent">
+    <main>
         <div class="card card1">
             <div class="colors-div">
                 <div class="child child1" style="background-color: rgb(246,229,141);"></div>
@@ -200,6 +200,6 @@ rgb(240,147,43);"></div>
                 <span>FR</span>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
