--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <a href="./Pages/Aussie.html">
         <div class="card card1">
             <div class="colors-div">
                 <div class="child child1" style="background-color: rgb(246,229,141);"></div>
@@ -40,7 +41,9 @@ rgb(240,147,43);"></div>
             </div>
 
         </div>
+        </a>
 
+        <a href="./Pages/British.html">
         <div class="card card2">
             <div class="colors-div">
                 <div class="child child1" style="background-color: rgb(246,229,141);"></div>
@@ -72,7 +75,9 @@ rgb(240,147,43);"></div>
                 <span>GB</span>
             </div>
         </div>
+        </a>
 
+        <a href="./Pages/Canadian.html">
         <div class="card card3">
             <div class="colors-div">
                 <div class="child child1" style="background-color: rgb(246,229,141);"></div>
@@ -104,7 +109,9 @@ rgb(240,147,43);"></div>
                 <span>CA</span>
             </div>
         </div>
+        </a>
 
+        <a href="./Pages/Chinese.html">
         <div class="card card4">
             <div class="colors-div">
                 <div class="child child1" style="background-color: rgb(246,229,141);"></div>
@@ -136,7 +143,9 @@ rgb(240,147,43);"></div>
                 <span>CN</span>
             </div>
         </div>
+        </a>
 
+        <a href="./Pages/Dutch.html">
         <div class="card card5">
             <div class="colors-div">
                 <div class="child child1" style="background-color: rgb(246,229,141);"></div>
@@ -168,7 +177,9 @@ rgb(240,147,43);"></div>
                 <span>NL</span>
             </div>
         </div>
+        </a>
 
+        <a href="./Pages/French.html">
         <div class="card card6">
             <div class="colors-div">
                 <div class="child child1" style="background-color: rgb(246,229,141);"></div>
@@ -200,6 +211,8 @@ rgb(240,147,43);"></div>
                 <span>FR</span>
             </div>
         </div>
+        </a>
+
     </main>
 </body>
 </html>
