made colors boxes

--- a/Pages/Aussie.html
+++ b/Pages/Aussie.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./PagesStyle.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=volume_up" />
     <title>Aussie Palette</title>
 </head>
 <body>
@@ -23,5 +22,28 @@
         
         <span class="SoundOn">Sound On </span>  
     </nav>
+
+    <main>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: orange;"></div>
+    </main>
 </body>
 </html>
