fix some issues

--- a/Pages/Aussie.html
+++ b/Pages/Aussie.html
@@ -24,26 +24,28 @@
     </nav>
 
     <main>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
-        <div class="colors" style="background-color: orange;"></div>
+        <div class="colors" style="background-color: rgb(246,229,141);"></div>
+        <div class="colors" style="background-color: rgb(255,190,118);"></div>
+        <div class="colors" style="background-color: 
+rgb(255,121,121);"></div>
+        <div class="colors" style="background-color: rgb(186,220,88);"></div>
+        <div class="colors" style="background-color: rgb(223,249,251);"></div>
+        <div class="colors" style="background-color: rgb(249,202,36);"></div>
+        <div class="colors" style="background-color: 
+rgb(240,147,43);"></div>
+        <div class="colors" style="background-color: rgb(235,77,75);"></div>
+        <div class="colors" style="background-color: rgb(106,176,76);"></div>
+        <div class="colors" style="background-color: rgb(199,236,238);"></div>
+        <div class="colors" style="background-color: rgb(126,214,223);"></div>
+        <div class="colors" style="background-color: rgb(224,86,253);"></div>
+        <div class="colors" style="background-color: rgb(104,109,224);"></div>
+        <div class="colors" style="background-color: rgb(48,51,107);"></div>
+        <div class="colors" style="background-color: rgb(149,175,192);"></div>
+        <div class="colors" style="background-color: rgb(34,166,179);"></div>
+        <div class="colors" style="background-color: rgb(190,46,221);"></div>
+        <div class="colors" style="background-color: rgb(72,52,212);"></div>
+        <div class="colors" style="background-color: rgb(19,15,64);"></div>
+        <div class="colors" style="background-color: rgb(83,92,104);"></div>
     </main>
 </body>
 </html>
