--- a/Pages/Dutch.html
+++ b/Pages/Dutch.html
@@ -20,7 +20,7 @@
             <option value="Feedback">Feedback</option>
         </select>
         
-        <span class="SoundOn">Sound On </span>  
+        <a href="#" class="SoundOn">Sound On</a>   
     </nav>
 
     <main>
